--- a/src/main/resources/com/example/contacts/Contacts.fxml
+++ b/src/main/resources/com/example/contacts/Contacts.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -8,7 +9,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.contacts.ContactsController">
    <left>
@@ -95,6 +95,21 @@
                   </TextField>
                </children>
             </GridPane>
+            <Button fx:id="addButton" layoutX="14.0" layoutY="381.0" mnemonicParsing="false" onAction="#addButtonPressed" prefHeight="26.0" prefWidth="100.0" text="Add">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </Button>
+            <Button fx:id="updateButton" layoutX="153.0" layoutY="381.0" mnemonicParsing="false" onAction="#updateButtonPressed" prefHeight="26.0" prefWidth="100.0" text="Update">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </Button>
+            <Button fx:id="deleteButton" layoutX="293.0" layoutY="381.0" mnemonicParsing="false" onAction="#deleteButtonPressed" prefHeight="26.0" prefWidth="100.0" text="Delete">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </Button>
          </children>
       </Pane>
    </center>
